--- a/.github/workflows/remote_task.yml
+++ b/.github/workflows/remote_task.yml
@@ -18,18 +18,18 @@ jobs:
           script: |
             ls -la
 
-      - name: Send mail
-        if: always()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: mail.abix.info.pl
-          server_port: 465
-          secure: true
-          username: ${{ secrets.MAIL_USERNAME }}
-          password: ${{ secrets.MAIL_PASSWORD }}
-          subject: "Raport - ${{ github.repository }}"
-          to: "mariusz.grecki87@gmail.com"
-          from: ${{ secrets.MAIL_USERNAME }}
-          body: |
-            Zadanie wykonane z repozytorium: ${{ github.repository }}
-            Status zadania SSH: ${{ job.status }}
+    #   - name: Send mail
+    #     if: always()
+    #     uses: dawidd6/action-send-mail@v3
+    #     with:
+    #       server_address: mail.abix.info.pl
+    #       server_port: 465
+    #       secure: true
+    #       username: ${{ secrets.MAIL_USERNAME }}
+    #       password: ${{ secrets.MAIL_PASSWORD }}
+    #       subject: "Raport - ${{ github.repository }}"
+    #       to: "mariusz.grecki87@gmail.com"
+    #       from: ${{ secrets.MAIL_USERNAME }}
+    #       body: |
+    #         Zadanie wykonane z repozytorium: ${{ github.repository }}
+    #         Status zadania SSH: ${{ job.status }}
